--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Archive/Dataviz Journal_002.png
 Archive/Dataviz Journal_001.png
 Archive/Dataviz Journal.pdf
 Archive/China-Global-Investment-Tracker-2020-Fall-FINAL.xlsx
+rsconnect/documents/ChinaWatchers_Dashboard.Rmd/rpubs.com/rpubs/Document.dcf
